# infini-ndice

./: .gitignore  .pdm-python  README.md  pyproject.toml  tests.py
src/: dicer.py  ndice.py
